--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
     entrypoint: redis-server --appendonly yes
 
   datadog:
-    image: example-checklist/datadog:latest
+    image: smarthead/datadog:latest
     build:
       context: build/docker/datadog-agent
       dockerfile: Dockerfile
@@ -60,7 +60,7 @@ services:
       - DD_DOGSTATSD_NON_LOCAL_TRAFFIC=true
       - DD_EXPVAR=service_name=web-app env=dev url=http://web-app:4000/debug/vars|service_name=web-api env=dev url=http://web-api:4001/debug/vars
   web-app:
-    image: example-checklist/web-app:latest
+    image: smarthead/web-app:latest
     build:
       context: .
       target: dev
@@ -102,7 +102,7 @@ services:
       # - GODEBUG=gctrace=1
 
   web-api:
-    image: example-checklist/web-api:latest
+    image: smarthead/web-api:latest
     build:
       context: .
       target: dev
