--- a/internal/postgres/sqlboiler.toml
+++ b/internal/postgres/sqlboiler.toml
@@ -6,6 +6,7 @@
     pass = "postgres"
     sslmode = "disable"
     whitelist=[
+            "accounts",
             "users",
             "subject",
             "period",
