Subscription model and subjects

--- a/internal/postgres/sqlboiler.toml
+++ b/internal/postgres/sqlboiler.toml
@@ -16,4 +16,5 @@
             "students_periods",
             "students_subjects",
             "deposit",
+            "subscription",
             ]
