--- a/internal/postgres/sqlboiler.toml
+++ b/internal/postgres/sqlboiler.toml
@@ -15,6 +15,6 @@
             "student",
             "students_periods",
             "students_subjects",
-            "deposit",
+            "deposits",
             "subscription",
             ]
