--- a/tools/schema/.env
+++ b/tools/schema/.env
@@ -1,5 +1,5 @@
-export SCHEMA_DB_HOST=127.0.0.1:5432
-export SCHEMA_DB_DATABASE=smarthead
-export SCHEMA_DB_USER=postgres
-export SCHEMA_DB_PASS=docker
-export SCHEMA_DB_DISABLE_TLS=true
+#export SCHEMA_DB_HOST=127.0.0.1:5432
+#export SCHEMA_DB_DATABASE=smarthead
+#export SCHEMA_DB_USER=postgres
+#export SCHEMA_DB_PASS=docker
+#export SCHEMA_DB_DISABLE_TLS=true
