--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ tmp
 docker-compose.yml
 *.env
 tools/schema/.env
+cmd/web-app/static/assets/js/app.bundle.js
+cmd/web-app/static/assets/js/app.bundle.js.map
+cmd/web-app/static/assets/js/vendors~app.bundle.js
+cmd/web-app/static/assets/js/vendors~app.bundle.js.map
