--- a/cmd/web-app/.gitignore
+++ b/cmd/web-app/.gitignore
@@ -1,3 +1,8 @@
 local.env
 tmp
 .env
+
+static/assets/js/app.bundle.js
+static/assets/js/app.bundle.js.map
+static/assets/js/vendors~app.bundle.js
+static/assets/js/vendors~app.bundle.js.map
