--- a/internal/postgres/sqlboiler.toml
+++ b/internal/postgres/sqlboiler.toml
@@ -8,6 +8,7 @@
     whitelist=[
             "accounts",
             "users",
+            "users_accounts",
             "subject",
             "period",
             "teacher",
