--- a/cmd/web-app/.gitignore
+++ b/cmd/web-app/.gitignore
@@ -6,3 +6,4 @@ static/assets/js/app.bundle.js
 static/assets/js/app.bundle.js.map
 static/assets/js/vendors~app.bundle.js
 static/assets/js/vendors~app.bundle.js.map
+.data
