--- a/ lighttpd-ssl.conf
+++ b/ lighttpd-ssl.conf
@@ -6,7 +6,7 @@ server.modules = (
         "mod_proxy",
 )
 
-server.document-root        = "/var/www/surebank/cmd/web-app/static"
+server.document-root        = "/var/www/smarthead/cmd/web-app/static"
 server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
 server.errorlog             = "/var/log/lighttpd/error.log"
 server.pid-file             = "/var/run/lighttpd.pid"
@@ -38,8 +38,8 @@ $HTTP["url"] !~ "\.(js|css|gif|jpg|png|ico|swf|svg|ttf|woff|gz)$" {
 
 $SERVER["socket"] == ":443" {
     ssl.engine              = "enable"
-    ssl.ca-file             = "/etc/letsencrypt/live/surebankltd.com/chain.pem"
-    ssl.pemfile             = "/etc/letsencrypt/live/surebankltd.com/merged.pem"
+    ssl.ca-file             = "/etc/letsencrypt/live/smarthead.com.ng/chain.pem"
+    ssl.pemfile             = "/etc/letsencrypt/live/smarthead.com.ng/merged.pem"
 }
 
 $HTTP["scheme"] == "http" {
