--- a/ lighttpd.conf
+++ b/ lighttpd.conf
@@ -32,4 +32,4 @@ $HTTP["url"] !~ "\.(js|css|gif|jpg|png|ico|txt|swf|html|htm|svg|ttf|woff|gz)$" {
 }
 
 
-cat /etc/letsencrypt/live/surebankltd.com/privkey.pem /etc/letsencrypt/live/surebankltd.com/cert.pem > /etc/letsencrypt/live/surebankltd.com/merged.pem
+cat /etc/letsencrypt/live/smarthead.com.ng/privkey.pem /etc/letsencrypt/live/smarthead.com.ng/cert.pem > /etc/letsencrypt/live/smarthead.com.ng/merged.pem
