--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       - "5433"
     ports:
       - "5433:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
     networks:
       main:
         aliases:
